--- a/ssm_dao/pom.xml
+++ b/ssm_dao/pom.xml
@@ -15,6 +15,13 @@
     <packaging>jar</packaging>
 
     <!--引入依赖-->
+
+    <properties>
+        <!--JDK编译版本设置-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        </properties>
     <dependencies>
         <!--model的依赖-->
         <dependency>
